#################################################################################################################################################################
"""
    Vantle (c) 2025
    projects.vantle.org
    connect@vantle.org
"""

module(
    name = "vantle",
    version = "0.0.0",
    bazel_compatibility = [">=9.0.0"],
)

#################################################################################################################################################################
##################### Dependencies                                                                                                               [ Dependencies ]
############### Toolchain                                                                                                                           [ Toolchain ]
########## Bazel                                                                                                                             [ Toolchain, Bazel ]
bazel_dep(name = "stardoc", version = "0.8.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "toolchains_llvm_bootstrapped", version = "0.5.7")

bazel_dep(name = "buildozer", version = "8.2.1", dev_dependency = True)

buildozer_binary = use_extension("@buildozer//:buildozer_binary.bzl", "buildozer_binary")
use_repo(buildozer_binary, "buildozer_binary")

########## LLVM                                                                                                                               [ Toolchain, LLVM ]
##### OSX SDK                                                                                                                            [ Toolchain, LLVM, OSX ]

osx = use_extension("@toolchains_llvm_bootstrapped//extensions:osx.bzl", "osx")
osx.framework(name = "AppKit")
osx.framework(name = "ApplicationServices")
osx.framework(name = "Carbon")
osx.framework(name = "CFNetwork")
osx.framework(name = "ColorSync")
osx.framework(name = "CoreFoundation")
osx.framework(name = "CoreGraphics")
osx.framework(name = "CoreImage")
osx.framework(name = "CoreServices")
osx.framework(name = "CoreText")
osx.framework(name = "CoreVideo")
osx.framework(name = "FontServices")
osx.framework(name = "Foundation")
osx.framework(name = "ImageIO")
osx.framework(name = "IOKit")
osx.framework(name = "IOSurface")
osx.framework(name = "Kernel")
osx.framework(name = "Metal")
osx.framework(name = "OSLog")
osx.framework(name = "QuartzCore")
osx.framework(name = "Security")
osx.framework(name = "SystemConfiguration")

##### Compilation                                                                                                                      [ Toolchain, Compilation ]
########## Java                                                                                                                               [ Toolchain, Java ]
bazel_dep(name = "rules_java", version = "9.4.0")

########## Python                                                                                                                           [ Toolchain, Python ]
bazel_dep(name = "rules_python", version = "1.8.3")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

########## Proto                                                                                                                             [ Toolchain, Proto ]
bazel_dep(name = "rules_proto", version = "7.1.0")

########## Rust                                                                                                                               [ Toolchain, Rust ]
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_prost", version = "0.68.1")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["wasm32-unknown-unknown"],
    versions = ["1.90.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@toolchains_llvm_bootstrapped//toolchain:all",
    "@rust_toolchains//:all",
    "//system/protobuf:toolchain",
    "@buildifier_prebuilt_toolchains//:buildifier_linux_amd64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildozer_linux_amd64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildifier_darwin_arm64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildozer_darwin_arm64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildifier_darwin_amd64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildozer_darwin_amd64_toolchain",
)

##### Crates                                                                                                                          [ Toolchain, Rust, Crates ]
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.54",
)
crate.spec(
    package = "cached",
    version = "0.56.0",
)
crate.spec(
    package = "ctor",
    version = "0.6.3",
)
crate.spec(
    package = "difference",
    version = "2.0.0",
)
crate.spec(
    package = "flate2",
    version = "1.1.5",
)
crate.spec(
    features = ["derive"],
    package = "bytemuck",
    version = "1.24.0",
)
crate.spec(
    package = "itertools",
    version = "0.14.0",
)
crate.spec(
    features = ["fancy"],
    package = "miette",
    version = "7.6.0",
)
crate.spec(
    package = "owo-colors",
    version = "4.2.3",
)
crate.spec(
    features = ["editor"],
    package = "inquire",
    version = "0.9.1",
)
crate.spec(
    package = "inquire-derive",
    version = "0.9.1",
)
crate.spec(
    package = "prettyplease",
    version = "0.2.37",
)
crate.spec(
    features = ["span-locations"],
    package = "proc-macro2",
    version = "1.0.105",
)
crate.spec(
    package = "quote",
    version = "1.0.43",
)
crate.spec(
    features = [
        "derive",
        "rc",
        "std",
    ],
    package = "serde",
    version = "1.0.228",
)
crate.spec(
    package = "serde_json",
    version = "1.0.149",
)
crate.spec(
    package = "serde_with",
    version = "3.16.1",
)
crate.spec(
    package = "pollster",
    version = "0.4.0",
)
crate.spec(
    features = [
        "full",
        "extra-traits",
    ],
    package = "syn",
    version = "2.0.112",
)
crate.spec(
    package = "winit",
    version = "0.30.12",
)
crate.spec(
    package = "wgpu",
    version = "28.0.0",
)
crate.spec(
    default_features = False,
    features = ["png"],
    package = "image",
    version = "0.25.9",
)
crate.spec(
    package = "glyphon",
    version = "0.10.0",
)
crate.spec(
    package = "pretty_assertions",
    version = "1.4.1",
)
crate.spec(
    package = "thiserror",
    version = "2.0.17",
)
crate.spec(
    features = [
        "deref",
        "deref_mut",
        "from",
        "into",
    ],
    package = "derive_more",
    version = "2.1.1",
)
crate.spec(
    package = "tracing",
    version = "0.1.44",
)
crate.spec(
    package = "tracing-core",
    version = "0.1.36",
)
crate.spec(
    package = "tracing-subscriber",
    version = "0.3.22",
)
crate.spec(
    package = "tracing-chrome",
    version = "0.7.2",
)
crate.spec(
    package = "strsim",
    version = "0.11.1",
)
crate.spec(
    package = "rstar",
    version = "0.12.2",
)

##### Server                                                                                                        [ Toolchain, Rust, Crates, Server ]
crate.spec(
    package = "axum",
    version = "0.8.8",
)
crate.spec(
    features = [
        "fs",
        "trace",
    ],
    package = "tower-http",
    version = "0.6.8",
)

##### Web Assembly                                                                                                   [ Toolchain, Rust, Crates, Wasm ]
crate.spec(
    package = "wasm-bindgen",
    version = "=0.2.105",
)
crate.spec(
    package = "wasm-bindgen-futures",
    version = "=0.4.55",
)
crate.spec(
    features = [
        "Clipboard",
        "Document",
        "DomParser",
        "DomTokenList",
        "Element",
        "Event",
        "EventTarget",
        "Headers",
        "History",
        "HtmlCollection",
        "HtmlElement",
        "IntersectionObserver",
        "IntersectionObserverEntry",
        "IntersectionObserverInit",
        "Location",
        "MediaQueryList",
        "Navigator",
        "Node",
        "NodeList",
        "PopStateEvent",
        "Request",
        "RequestInit",
        "Response",
        "Storage",
        "SupportedType",
        "Window",
    ],
    package = "web-sys",
    version = "=0.3.82",
)
crate.spec(
    package = "js-sys",
    version = "=0.3.82",
)

##### Prost Toolchain                                                                                              [ Toolchain, Rust, Crates, Prost ]
crate.spec(
    package = "prost",
    version = "0.14.1",
)
crate.spec(
    package = "prost-types",
    version = "0.14.1",
)
crate.spec(
    features = ["transport"],
    package = "tonic",
    version = "0.14.2",
)
crate.spec(
    package = "tonic-prost",
    version = "0.14.2",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.5.0",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.5.0",
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)

##### Streaming                                                                                                  [ Toolchain, Rust, Crates, Streaming ]
crate.spec(
    package = "async-stream",
    version = "0.3.6",
)
crate.spec(
    package = "futures-core",
    version = "0.3.31",
)
crate.spec(
    features = [
        "macros",
        "rt-multi-thread",
        "signal",
        "sync",
    ],
    package = "tokio",
    version = "1.49.0",
)
crate.spec(
    features = ["sync"],
    package = "tokio-stream",
    version = "0.1.18",
)
crate.spec(
    features = ["rt"],
    package = "tokio-util",
    version = "0.7.18",
)
crate.spec(
    package = "dashmap",
    version = "6.1.0",
)
crate.spec(
    package = "url",
    version = "2.5.8",
)
crate.spec(
    package = "sha2",
    version = "0.10",
)

##### Document                                                                                                  [ Toolchain, Rust, Crates, Document ]
crate.spec(
    package = "pulldown-cmark",
    version = "0.13.0",
)

##### Syntax                                                                                                    [ Toolchain, Rust, Crates, Syntax ]
crate.spec(
    package = "tree-sitter",
    version = "0.25.6",
)
crate.spec(
    package = "tree-sitter-python",
    version = "0.25.0",
)
crate.spec(
    package = "tree-sitter-bash",
    version = "0.25.1",
)
crate.annotation(
    crate = "tree-sitter",
    gen_build_script = "on",
)
crate.annotation(
    crate = "tree-sitter-python",
    gen_build_script = "on",
)
crate.annotation(
    crate = "tree-sitter-bash",
    gen_build_script = "on",
)
crate.from_specs()
use_repo(crate, "crates")

########## Validation
##### Document                                                                                                                           [ Validation, Document ]
vnu = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

vnu(
    name = "vnu",
    build_file_content = """exports_files(["package/build/dist/vnu.jar"])""",
    sha256 = "a28e107f00d1d2dceb5a6857e90db36c92b4e387d0480dec70bae5cbc46d16eb",
    urls = ["https://registry.npmjs.org/vnu-jar/-/vnu-jar-26.2.6.tgz"],
)

##### Bazel                                                                                                                                 [ Validation, Bazel ]
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

buildifier_prebuilt = use_extension("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_deps_extension", dev_dependency = True)
use_repo(buildifier_prebuilt, "buildifier_prebuilt_toolchains")
