#################################################################################################################################################################
"""
    Vantle (c) 2025
    projects.vantle.org
    connect@vantle.org
"""

module(
    name = "vantle",
    version = "0.0.0",
    bazel_compatibility = [">=9.0.0"],
)

#################################################################################################################################################################
##################### Dependencies                                                                                                               [ Dependencies ]
############### Toolchain                                                                                                                           [ Toolchain ]
########## Bazel                                                                                                                             [ Toolchain, Bazel ]
bazel_dep(name = "stardoc", version = "0.8.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "apple_support", version = "2.2.0")
bazel_dep(name = "llvm", version = "0.6.0")

bazel_dep(name = "buildozer", version = "8.5.1", dev_dependency = True)

buildozer_binary = use_extension("@buildozer//:buildozer_binary.bzl", "buildozer_binary")
use_repo(buildozer_binary, "buildozer_binary")

########## LLVM                                                                                                                               [ Toolchain, LLVM ]
##### OSX SDK                                                                                                                            [ Toolchain, LLVM, OSX ]

osx = use_extension("@llvm//extensions:osx.bzl", "osx")
osx.framework(name = "AppKit")
osx.framework(name = "ApplicationServices")
osx.framework(name = "Carbon")
osx.framework(name = "CFNetwork")
osx.framework(name = "ColorSync")
osx.framework(name = "CoreFoundation")
osx.framework(name = "CoreGraphics")
osx.framework(name = "CoreImage")
osx.framework(name = "CoreServices")
osx.framework(name = "CoreText")
osx.framework(name = "CoreVideo")
osx.framework(name = "FontServices")
osx.framework(name = "Foundation")
osx.framework(name = "ImageIO")
osx.framework(name = "IOKit")
osx.framework(name = "IOSurface")
osx.framework(name = "Kernel")
osx.framework(name = "Metal")
osx.framework(name = "OSLog")
osx.framework(name = "QuartzCore")
osx.framework(name = "Security")
osx.framework(name = "SystemConfiguration")

##### MinGW                                                                                                                        [ Toolchain, LLVM, MinGW ]
mingw = use_extension("@llvm//runtimes/mingw/extension:mingw.bzl", "mingw")
use_repo(mingw, "mingw")

##### Compilation                                                                                                                      [ Toolchain, Compilation ]
########## Java                                                                                                                               [ Toolchain, Java ]
bazel_dep(name = "rules_java", version = "9.5.0")

########## Python                                                                                                                           [ Toolchain, Python ]
bazel_dep(name = "rules_python", version = "1.8.4")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.14",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.14",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

########## Proto                                                                                                                             [ Toolchain, Proto ]
bazel_dep(name = "rules_proto", version = "7.1.0")

########## Rust                                                                                                                               [ Toolchain, Rust ]
bazel_dep(name = "rules_rust", version = "0.68.1")
bazel_dep(name = "rules_rust_prost", version = "0.68.1")
bazel_dep(name = "rules_rust_wasm_bindgen", version = "0.68.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = ["wasm32-unknown-unknown"],
    sha256s = {
        "cargo-1.93.1-aarch64-apple-darwin.tar.xz": "ecd50b093656061366c5af1184af10d883f21bddb482a9c2142fe860c0f671b2",
        "cargo-1.93.1-aarch64-pc-windows-msvc.tar.xz": "c671620614da9312a6e1b015aa8c4f21d1f7727d57a62028e28c961daf0d8fb4",
        "cargo-1.93.1-aarch64-unknown-linux-gnu.tar.xz": "0788df66f965bff56643661d30d42a52bf77423185a8081ef81aebc2ba7d6f05",
        "cargo-1.93.1-powerpc64le-unknown-linux-gnu.tar.xz": "dfb289980f39772f0728f60b84094bc9f1f74175a985ac3d2cf48ef5125be821",
        "cargo-1.93.1-s390x-unknown-linux-gnu.tar.xz": "7cb83b6cadfd12a44bff0cb6bb9e6d64c9f249699afecaadcf58db7c2fd7ecd2",
        "cargo-1.93.1-x86_64-apple-darwin.tar.xz": "2ee02e5a4f3822c4fb66a43d2955cedd84209b687c871a6dbdce30e4386bd53b",
        "cargo-1.93.1-x86_64-pc-windows-msvc.tar.xz": "c692d568c988f7ea7788a22a6b8eea13d6ed6e767788e13adc9ac006b1bf83cb",
        "cargo-1.93.1-x86_64-unknown-freebsd.tar.xz": "fff82ab19e15a10552e7a37d8d10d3ca11222352a2bf63f93a7c4b3b75f9ea64",
        "cargo-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "dbf12e8fd2a245a6bdd9f6c8df267cb2c25b0c56866ee91d8321337df0a00ddb",
        "clippy-1.93.1-aarch64-apple-darwin.tar.xz": "33d57654b0f19360cc4deecbaf248586f89ce9d345df2d54ee8d5541cf7c9f95",
        "clippy-1.93.1-aarch64-pc-windows-msvc.tar.xz": "0703c65fac249eebf8b32dfc72399b741458ea843593358e721e4a8d72422ecf",
        "clippy-1.93.1-aarch64-unknown-linux-gnu.tar.xz": "7bd258012c517baf62f14674c84fc513224b4d8161fea129f7ad1ae44ee6895b",
        "clippy-1.93.1-powerpc64le-unknown-linux-gnu.tar.xz": "0c2c79cd6203daa170b8cb54866552e326f6c22312692b07de634b6a695a7e3f",
        "clippy-1.93.1-s390x-unknown-linux-gnu.tar.xz": "57ac9f680627a462b77a603de197167c6c42fe95aacacd08b39e8fa2bcd86be2",
        "clippy-1.93.1-x86_64-apple-darwin.tar.xz": "024c9f65506e40945eeed921b8ed812d5e8132f5ece4dfd872a4815cbf7084e1",
        "clippy-1.93.1-x86_64-pc-windows-msvc.tar.xz": "11b06b21189589f2ee2554b4dcbc3f9524f8e469ceb5219d8ba1a9f7ade3141d",
        "clippy-1.93.1-x86_64-unknown-freebsd.tar.xz": "48aa6ef5991d4e03ffad244379d60703d58297f5cbdd8a49482abba6051fc79d",
        "clippy-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "60c0ce83ecc1700de724404a928c30d096c178a610c6707d4f06cee25284cc02",
        "llvm-tools-1.93.1-aarch64-apple-darwin.tar.xz": "d61834568e6e591db13ad235e09c3c65e2f10c099c29bfd8eec018f6c9f55462",
        "llvm-tools-1.93.1-aarch64-pc-windows-msvc.tar.xz": "c7f48f70aeabd0898f4fd8ab36518f2401c27afe17aba9a0d5fb3173622e43e6",
        "llvm-tools-1.93.1-aarch64-unknown-linux-gnu.tar.xz": "a4fbdc88e2ebeb403870ccf13c874efa74ac858b77d50a9c8a821a851a21132b",
        "llvm-tools-1.93.1-powerpc64le-unknown-linux-gnu.tar.xz": "abfb0b1b8d2702ac609d7fb46850d38bd128830e79e41b75458aa5b775acf15f",
        "llvm-tools-1.93.1-s390x-unknown-linux-gnu.tar.xz": "3aa561f98fe0644c020dbb39a8f83048f1ae51039d6c7e04342ac234e01ec48a",
        "llvm-tools-1.93.1-x86_64-apple-darwin.tar.xz": "17f3dacb64eaf4d7ce9285d3325dcdd146c167d85eddbb8d965903475767cdfe",
        "llvm-tools-1.93.1-x86_64-pc-windows-msvc.tar.xz": "c0be7fe3c37a62db3c1e845ebf711afce414bc21ad9ae6b88eed97e160bec1ac",
        "llvm-tools-1.93.1-x86_64-unknown-freebsd.tar.xz": "ada18c030bf6c00fd2b50dcf842db52a6dbd39972ef16268e275bf8abe2f1695",
        "llvm-tools-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "f32c5405d7765ffd18554e01f59eff1db32e22813a529425f4ad8903722b594e",
        "rust-std-1.93.1-aarch64-apple-darwin.tar.xz": "dd278e6eb993ddffb190442ca11ed1e118c1edaf04114910e3c8c652f6423f65",
        "rust-std-1.93.1-aarch64-pc-windows-msvc.tar.xz": "7640bf12cbb9e3bbd91df7a99f31b5178fc6db4f8f1ee180fea19784b19e6811",
        "rust-std-1.93.1-aarch64-unknown-linux-gnu.tar.xz": "56f2cd66ad7167dd6924ff095063ffddfe731812a1909b9200bb0ee21982fc47",
        "rust-std-1.93.1-powerpc64le-unknown-linux-gnu.tar.xz": "bf40e395e76521c32877b47f52bc066a69cc0da4ed3cbda976fe00eb77f51e29",
        "rust-std-1.93.1-s390x-unknown-linux-gnu.tar.xz": "735f3a737e7fd36053b9b41ced9276c33a9802b2a097d83fba8f1580a6869aa1",
        "rust-std-1.93.1-wasm32-unknown-unknown.tar.xz": "82bcf1e75ad071548bb97f11676b332dd260807572414553a06ee5d88d20a63e",
        "rust-std-1.93.1-x86_64-apple-darwin.tar.xz": "f378a2bdca73a20f3b87cc1937bbf153a85fa8fb8c06073728ebeece03441f96",
        "rust-std-1.93.1-x86_64-pc-windows-msvc.tar.xz": "44033314fb62651a71d527b77c2f4cc0e89120d5cb64090a852ec841f0850f92",
        "rust-std-1.93.1-x86_64-unknown-freebsd.tar.xz": "6cece0dd6494f10b604ca92bc62de42cbb5e515c6ec20d43f16d1d11ea1650e5",
        "rust-std-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "82c4e41268f1741e4eb68796aeb6ca5042406ae858dd56144155c4ef8d87d8b6",
        "rustc-1.93.1-aarch64-apple-darwin.tar.xz": "d103a0ee04c121b30cf061c7ad1456daaebd7ff0a7ea5fdb64acf92d86cb25fd",
        "rustc-1.93.1-aarch64-pc-windows-msvc.tar.xz": "3f96f2b591340009f5b2d8831c99c1d7cfb48c28f60c040de4b4508f311fe0ea",
        "rustc-1.93.1-aarch64-unknown-linux-gnu.tar.xz": "7c48ea79360f88145866ebee8dfe1c8971f008c69efe41d69c03ac72ad7ee0a7",
        "rustc-1.93.1-powerpc64le-unknown-linux-gnu.tar.xz": "bd2f61ed3a2c374b7b89286b22f13d147d3b80b76584288f4fa80f805b6f317e",
        "rustc-1.93.1-s390x-unknown-linux-gnu.tar.xz": "39c3ebb2df0f30d5de236964646c654277218f2dfda4690798425d00d8a4a32a",
        "rustc-1.93.1-x86_64-apple-darwin.tar.xz": "a01c41b79eac82ae9666b3e2487c14740b5fdde0b1d1d1f4c8932f1923bee3d6",
        "rustc-1.93.1-x86_64-pc-windows-msvc.tar.xz": "15b3bf2a6896e70f1366aa10da369e5b2bdc4fea18e4e4246e6988391f81b4c2",
        "rustc-1.93.1-x86_64-unknown-freebsd.tar.xz": "4401562eaf11e3631a273e42112526475bd2d5fa0a51b55f675a4630759da70d",
        "rustc-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "b9db2636f5a101c4cdaf46a26f8a0c8e4b5767ecdb02ae9c7ccc3ead577732bc",
        "rust-src-1.93.1.tar.xz": "7ade6b2ef03a3b7a614d54df6637a97d18144690bd49daab63bd4b22e0e6bac0",
        "rust-analyzer-1.93.1-aarch64-apple-darwin.tar.xz": "62e29fb21a2bd3e1c3bf77864d2606a70b201c8b774bc18068c19351e70bbc35",
        "rust-analyzer-1.93.1-x86_64-unknown-linux-gnu.tar.xz": "d131d9e16fea7c42fbd32645be04e0d8efb1234b8fc39d85658f5e289c5624d9",
    },
    versions = ["1.93.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@llvm//toolchain:all",
    "@rust_toolchains//:all",
    "//platform/protobuf:toolchain",
    "//platform/wasm:toolchain",
    "@buildifier_prebuilt_toolchains//:buildifier_linux_amd64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildozer_linux_amd64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildifier_darwin_arm64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildozer_darwin_arm64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildifier_darwin_amd64_toolchain",
    "@buildifier_prebuilt_toolchains//:buildozer_darwin_amd64_toolchain",
)

##### Crates                                                                                                                          [ Toolchain, Rust, Crates ]
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.60",
)
crate.spec(
    package = "cached",
    version = "0.56.0",
)
crate.spec(
    package = "ctor",
    version = "0.6.3",
)
crate.spec(
    package = "difference",
    version = "2.0.0",
)
crate.spec(
    package = "flate2",
    version = "1.1.9",
)
crate.spec(
    features = ["derive"],
    package = "bytemuck",
    version = "1.25.0",
)
crate.spec(
    package = "itertools",
    version = "0.14.0",
)
crate.spec(
    features = ["fancy"],
    package = "miette",
    version = "7.6.0",
)
crate.spec(
    package = "owo-colors",
    version = "4.2.3",
)
crate.spec(
    features = ["editor"],
    package = "inquire",
    version = "0.9.3",
)
crate.spec(
    package = "inquire-derive",
    version = "0.9.3",
)
crate.spec(
    package = "prettyplease",
    version = "0.2.37",
)
crate.spec(
    features = ["span-locations"],
    package = "proc-macro2",
    version = "1.0.106",
)
crate.spec(
    package = "quote",
    version = "1.0.44",
)
crate.spec(
    features = [
        "derive",
        "rc",
        "std",
    ],
    package = "serde",
    version = "1.0.228",
)
crate.spec(
    package = "serde_json",
    version = "1.0.149",
)
crate.spec(
    package = "serde_with",
    version = "3.16.1",
)
crate.spec(
    package = "pollster",
    version = "0.4.0",
)
crate.spec(
    features = [
        "full",
        "extra-traits",
    ],
    package = "syn",
    version = "2.0.117",
)
crate.spec(
    package = "winit",
    version = "0.30.12",
)
crate.spec(
    package = "wgpu",
    version = "28.0.0",
)
crate.spec(
    default_features = False,
    features = ["png"],
    package = "image",
    version = "0.25.9",
)
crate.spec(
    package = "glyphon",
    version = "0.10.0",
)
crate.spec(
    package = "pretty_assertions",
    version = "1.4.1",
)
crate.spec(
    package = "thiserror",
    version = "2.0.18",
)
crate.spec(
    features = [
        "deref",
        "deref_mut",
        "from",
        "into",
    ],
    package = "derive_more",
    version = "2.1.1",
)
crate.spec(
    package = "tracing",
    version = "0.1.44",
)
crate.spec(
    package = "tracing-core",
    version = "0.1.36",
)
crate.spec(
    package = "tracing-subscriber",
    version = "0.3.22",
)
crate.spec(
    package = "tracing-chrome",
    version = "0.7.2",
)
crate.spec(
    package = "strsim",
    version = "0.11.1",
)
crate.spec(
    package = "rstar",
    version = "0.12.2",
)

##### Server                                                                                                        [ Toolchain, Rust, Crates, Server ]
crate.spec(
    package = "axum",
    version = "0.8.8",
)
crate.spec(
    features = [
        "fs",
        "trace",
    ],
    package = "tower-http",
    version = "0.6.8",
)

##### Web Assembly                                                                                                   [ Toolchain, Rust, Crates, Wasm ]
crate.spec(
    package = "wasm-bindgen",
    version = "=0.2.111",
)
crate.spec(
    package = "wasm-bindgen-futures",
    version = "=0.4.61",
)
crate.spec(
    features = [
        "Clipboard",
        "Document",
        "DomParser",
        "DomTokenList",
        "Element",
        "Event",
        "EventTarget",
        "Headers",
        "History",
        "HtmlCollection",
        "HtmlElement",
        "IntersectionObserver",
        "IntersectionObserverEntry",
        "IntersectionObserverInit",
        "Location",
        "MediaQueryList",
        "Navigator",
        "Node",
        "NodeList",
        "PopStateEvent",
        "Request",
        "RequestInit",
        "Response",
        "Storage",
        "SupportedType",
        "Window",
    ],
    package = "web-sys",
    version = "=0.3.88",
)
crate.spec(
    package = "js-sys",
    version = "=0.3.88",
)
crate.spec(
    package = "wasm-bindgen-cli",
    version = "=0.2.111",
)
crate.annotation(
    crate = "wasm-bindgen-cli",
    gen_binaries = ["wasm-bindgen"],
)

##### Prost Toolchain                                                                                              [ Toolchain, Rust, Crates, Prost ]
crate.spec(
    package = "prost",
    version = "0.14.3",
)
crate.spec(
    package = "prost-types",
    version = "0.14.3",
)
crate.spec(
    features = ["transport"],
    package = "tonic",
    version = "0.14.5",
)
crate.spec(
    package = "tonic-prost",
    version = "0.14.5",
)
crate.spec(
    package = "protoc-gen-prost",
    version = "0.5.0",
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.spec(
    package = "protoc-gen-tonic",
    version = "0.5.0",
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)

##### Streaming                                                                                                  [ Toolchain, Rust, Crates, Streaming ]
crate.spec(
    package = "async-stream",
    version = "0.3.6",
)
crate.spec(
    package = "futures-core",
    version = "0.3.32",
)
crate.spec(
    features = [
        "macros",
        "rt-multi-thread",
        "signal",
        "sync",
    ],
    package = "tokio",
    version = "1.49.0",
)
crate.spec(
    features = ["sync"],
    package = "tokio-stream",
    version = "0.1.18",
)
crate.spec(
    features = ["rt"],
    package = "tokio-util",
    version = "0.7.18",
)
crate.spec(
    package = "dashmap",
    version = "6.1.0",
)
crate.spec(
    package = "url",
    version = "2.5.8",
)
crate.spec(
    package = "sha2",
    version = "0.10.9",
)

##### Document                                                                                                  [ Toolchain, Rust, Crates, Document ]
crate.spec(
    package = "pulldown-cmark",
    version = "0.13.0",
)

##### Syntax                                                                                                    [ Toolchain, Rust, Crates, Syntax ]
crate.spec(
    package = "tree-sitter",
    version = "0.26.5",
)
crate.spec(
    package = "tree-sitter-python",
    version = "0.25.0",
)
crate.spec(
    package = "tree-sitter-bash",
    version = "0.25.1",
)
crate.annotation(
    crate = "tree-sitter",
    gen_build_script = "on",
)
crate.annotation(
    crate = "tree-sitter-python",
    gen_build_script = "on",
)
crate.annotation(
    crate = "tree-sitter-bash",
    gen_build_script = "on",
)
crate.from_specs()
use_repo(crate, "crates")

########## Validation
##### Document                                                                                                                           [ Validation, Document ]
vnu = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

vnu(
    name = "vnu",
    build_file_content = """exports_files(["package/build/dist/vnu.jar"])""",
    sha256 = "bd68ba6cda589513a1ba273405708d2a63865cb51f614946819236d42cc34301",
    urls = ["https://registry.npmjs.org/vnu-jar/-/vnu-jar-26.2.20.tgz"],
)

##### Bazel                                                                                                                                 [ Validation, Bazel ]
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

buildifier_prebuilt = use_extension("@buildifier_prebuilt//:defs.bzl", "buildifier_prebuilt_deps_extension", dev_dependency = True)
use_repo(buildifier_prebuilt, "buildifier_prebuilt_toolchains")
