#################################################################################################################################################################
"""
    Vantle (c) 2025
    projects.vantle.org
    connect@vantle.org
"""

module(
    name = "vantle",
    version = "1.0.0",
    bazel_compatibility = [">=7.0.0"],
)

#################################################################################################################################################################
##################### Dependencies                                                                                                               [ Dependencies ]
############### Toolchain                                                                                                                           [ Toolchain ]
########## Bazel                                                                                                                             [ Toolchain, Bazel ]
bazel_dep(name = "stardoc", version = "0.7.2")
bazel_dep(name = "buildozer", version = "7.3.1", dev_dependency = True)

buildozer_binary = use_extension("@buildozer//:buildozer_binary.bzl", "buildozer_binary")
use_repo(buildozer_binary, "buildozer_binary")

########## Toolchain                                                                                                                                [ Toolchain ]
##### Compilation                                                                                                                      [ Toolchain, Compilation ]
########## Rust                                                                                                                               [ Toolchain, Rust ]
bazel_dep(name = "rules_rust", version = "0.60.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.84.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

##### Crates                                                                                                                          [ Toolchain, Rust, Crates ]
crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5.26",
)
crate.spec(
    package = "log",
    version = "0.4.25",
)
crate.spec(
    package = "bon",
    version = "3.3.2",
)
crate.spec(
    package = "thiserror",
    version = "2.0.11",
)
crate.spec(
    package = "itertools",
    version = "0.14.0",
)
crate.spec(
    package = "simple_logger",
    version = "5.0.0",
)
crate.spec(
    features = [
        "derive",
        "rc",
        "std",
    ],
    package = "serde",
    version = "1.0.217",
)
crate.spec(
    package = "serde_with",
    version = "3.12.0",
)
crate.spec(
    package = "serde_json",
    version = "1.0.135",
)
crate.spec(
    package = "pretty_assertions",
    version = "1.4.1",
)
crate.spec(
    package = "windows",
    version = "0.59.0",
)
crate.spec(
    package = "windows-targets",
    version = "0.53.0",
)
crate.spec(
    package = "ctor",
    version = "0.2.9",
)
crate.spec(
    package = "winit",
    version = "0.30.8",
)
crate.from_specs()
use_repo(crate, "crates")

##### Dependencies                                                                                                            [ Toolchain, Python, Dependencies ]

########## Validation
##### Bazel                                                                                                                                 [ Validation, Bazel ]
bazel_dep(name = "buildifier_prebuilt", version = "8.0.0", dev_dependency = True)
